完成了热修复的实现

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,27 +12,23 @@
     android:orientation="vertical"
     tools:context="com.github.tinkersample.MainActivity">
 
-    <EditText
-        android:id="@+id/et_user_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="输入名字"/>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="点击显示名字按钮,在没有修复前,点击该按钮,app会crash,修复后不会crash"/>
-
-    <Button
-        android:id="@+id/btn_show_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="显示名字"/>
-
+        android:text="不来了，就这样吧"
+        android:textColor="#f0f"
+        android:textSize="20sp"/>
     <Button
         android:id="@+id/btn_load_patch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="加载patch"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="重启应用"
+        android:onClick="onRestart"/>
 
 
 
